<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cantuina</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    
    <string name="tv_temp">24.5</string>
    <string name="tv_celsius">°C</string>
    <string name="tv_humi">60.2</string>
    <string name="tv_prh">%rh</string>
    <string name="tv_result">press to connect</string>
    
    <string name="btn_single">Single</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_continuous">Continuous</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_connect">Connect</string>

</resources>
