<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <com.echo.holographlibrary.LineGraph
        android:id="@+id/tempGraph"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/linTemphumi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tempGraph"
        android:layout_marginTop="8dp" >

        <TextView
            android:id="@+id/tvTemp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/boxblue_leftround"
            android:gravity="center"
            android:text="@string/tv_temp"
            android:textSize="40sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/boxblue_rightround"
            android:gravity="left|center_vertical"
            android:text="@string/tv_celsius"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/boxred_leftround"
            android:gravity="right|center_vertical"
            android:text="@string/tv_prh"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvHumi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/boxred_rightround"
            android:gravity="center"
            android:text="@string/tv_humi"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linTemphumi"
        android:layout_marginTop="8dp" >

        <Button
            android:id="@+id/btnSingle"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/btn_single" />

        <Button
            android:id="@+id/btnContinuous"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/btn_continuous" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbBusy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnConnect"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/pbBusy"
        android:text="@string/btn_connect" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btnConnect"
        android:layout_toRightOf="@id/btnConnect"
        android:text="@string/tv_result" />

    <!-- style="@android:style/Widget.ProgressBar.Small" -->

</RelativeLayout>